--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<!--
-* CoreUI - Angular 20.3 Free Admin Template
-* @version v5.5.17
-* @link https://coreui.io/angular/
-* Copyright (c) 2017-2025 creativeLabs Łukasz Holeczek
-* License: MIT
--->
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI Free Angular Admin Template" name="description" />
-  <meta content="Łukasz Holeczek" name="author" />
+  <meta content="Pio" name="description" />
+  <meta content="Yusril Mahendri" name="author" />
   <meta
-    content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
+    content="Pos, Kasir, Inventory, Toko, Warung, UMKM, Penjualan, Pembelian, Stok, Produk, Pelanggan, Supplier, Laporan"
     name="keyword"
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
-  <title>CoreUI Free Angular Admin Template</title>
+  <title>Pio</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
