--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
   <title>Pio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
